<resources>
    <string name="app_name">Bitcamp No Line</string>
    <string name="action_settings">Settings</string>

    <string name="password_hint">Password</string>
    <string name="logo">logo</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="signin">Sign In</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="school">School</string>
    <string name="school_year">School year</string>
    <string name="allergies">Food allergies</string>
    <string name="DOB">Date of birth: </string>
    <string name="Next">Next</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>


</resources>
