<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo" />


    <EditText
        android:id="@+id/passwordField"
        android:background="@drawable/registration1_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="16dp"
        android:layout_marginBottom="99dp"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_centerHorizontal="true">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login_button_label"
        android:layout_marginBottom="37dp"
        android:layout_alignParentBottom="true" />

    <EditText
        android:id="@+id/emailField"
        android:background="@drawable/registration1_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/passwordField"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField" />


</RelativeLayout>