<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">


    <EditText
        android:id="@+id/first_name"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText

        android:id="@+id/last_name"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:inputType="textPersonName"
        android:maxLines="1" />


    <Spinner
        android:id="@+id/school"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/school"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="18sp" />


    <TextView

        android:id="@+id/DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/month"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/month"
        android:layout_marginRight="230dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/DOB"
        android:textAlignment="center"
        android:textSize="14sp" />

    <EditText

        android:id="@+id/month"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="number"
        android:maxLength="2"
        android:maxLines="1"
        android:textAlignment="center" />

    <EditText

        android:id="@+id/day"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="number"
        android:maxLength="2"
        android:maxLines="1"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/year"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/day"
        android:layout_alignBottom="@+id/day"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="275dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:textAlignment="center" />


    <Spinner
        android:id="@+id/school_year"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="School Year"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="16dp"/>

    <CheckBox
        android:id="@+id/food_allergies"
        android:background="@drawable/registration1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="@string/allergies"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:onClick="foodAllergiesCheckBox"
        android:maxLines="1"/>

    <Button
        android:id="@+id/next_button"
        android:layout_centerHorizontal="true"

        android:ems="10"
        android:background="@drawable/rectangle1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:hint="@string/Next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp" />


    <!---
    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="169dp"
        android:layout_alignParentEnd="true">


    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="211dp"
        android:layout_below="@+id/first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="260dp" />
        -->

</RelativeLayout>