<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.echessa.todo.SignUp2Activity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo2"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            android:layout_marginBottom="8dp" />

       <EditText
           android:id="@+id/emailEditText"
           android:background="@drawable/registration1_1"
           android:layout_width="300dp"
           android:layout_height="45dp"
           android:ems="10"
           android:inputType="textEmailAddress"
           android:hint="@string/email"
           android:paddingStart="@dimen/activity_horizontal_margin"
           android:paddingEnd="@dimen/activity_horizontal_margin"
           android:paddingLeft="@dimen/activity_horizontal_margin"
           android:paddingRight="@dimen/activity_horizontal_margin"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"


           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginTop="233dp"
           android:layout_marginLeft="16dp"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginRight="16dp"
           app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
           android:layout_marginBottom="8dp" />

       <EditText
           android:id="@+id/passwordEditText"
           android:background="@drawable/registration1_1"
           android:layout_width="300dp"
           android:layout_height="wrap_content"
           android:ems="10"
           android:inputType="textPassword"
           android:hint="@string/password"
           android:paddingStart="@dimen/activity_horizontal_margin"
           android:paddingEnd="@dimen/activity_horizontal_margin"
           android:paddingLeft="@dimen/activity_horizontal_margin"
           android:paddingRight="@dimen/activity_horizontal_margin"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"


           android:layout_marginLeft="16dp"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginRight="16dp"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginBottom="80dp"
           app:layout_constraintBottom_toTopOf="@+id/registerButton"
           app:layout_constraintVertical_bias="0.309"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           app:layout_constraintHorizontal_bias="0.6" />

       <Button
           android:id="@+id/registerButton"
           android:background="@drawable/rectangle1"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:layout_below="@+id/register"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:layout_marginLeft="8dp"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginRight="8dp"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginBottom="65dp"
           android:layout_marginStart="8dp"
           android:layout_marginEnd="8dp" />




</android.support.constraint.ConstraintLayout>